--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link mr-5" href="#"><i class="fa-solid fa-user-plus"></i>&nbspSignup</a>
+            <a class="nav-link mr-5" href="{% url 'usersignup' %}"><i class="fa-solid fa-user-plus"></i>&nbspSignup</a>
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#"><i class="fa-solid fa-right-to-bracket"></i>&nbsplogin</a>
