--- a/templates/usersignup.html
+++ b/templates/usersignup.html
@@ -1,13 +1,111 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+  <!-- Font Awesome CDN -->
+  <script src="https://kit.fontawesome.com/259d0ad731.js" crossorigin="anonymous"></script>
+  <!-- JQuery CDN -->
+  <script src="{% static 'js/jquery-3.6.1.min.js' %}"></script>
+  <!-- Google Fonts -->
+  <link rel="stylesheet" href="{% static 'css/googlefonts.css' %}">
+  <!-- Custom CSS file -->
+  <link rel="stylesheet" href="{% static 'css/usersignup.css' %}">
+  <title>Sign Up</title>
+  <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.png' %}">
 </head>
 <body>
-  <h1>signup</h1>
-  
+
+<div class="noscript">
+  <div class="container mt-4">
+    <div class="col-md-4 offset-md-4">
+      <div class="card">
+        <div class="card-header">
+          <h3>Signup</h3>
+        </div>
+        <div class="card-body">
+          <form action="#" method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="name" class="label-tag">Name</label>
+              <input type="text" class="form-control form-input" name="name" value="{{values.name}}" placeholder="Enter your name" autocomplete="off">
+            </div>
+            <div class="form-group">
+              <label for="email" class="label-tag">Email</label>
+              <input type="email" class="form-control form-input" name="email" value="{{values.email}}" id="email-input" placeholder="Enter your Email" autocomplete="off">
+              <span id="email-error"></span>
+            </div>
+            <div class="form-group">
+              <label for="contact" class="label-tag">Create Password</label>
+              <input type="password" name="password" value="{{values.password}}" placeholder="Create your password" class="form-control form-input" id="pswd-input" autocomplete="off">
+              <span id="pswd-strength"></span>
+            </div>
+            <div class="form-group">
+              <label for="contact" class="label-tag">Confirm Password</label>
+              <input type="password" name="confirmpassword" value="{{values.confirmpassword}}" id="cpswd-input" placeholder="Confirm your password" class="form-control form-input" autocomplete="off">
+            </div>
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="pswd-check">
+              <label class="form-check-label label-tag" for="pswd-check">Show password</label>
+            </div>
+            <input type="submit" value="Submit" class="btn submit-btn form-control">
+            <p class="text-center pt-3 login-link"><a href="#" class="login-link">Already have an account? Login Here!</a></p>
+          </form>
+          {% if messages %}
+          {% for message in messages %}
+            {% if message.tags == 'error' %}
+              <div class="alert alert-danger alert-dismissible fade show" role="alert" id="alert">
+                {{message}}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+            {% else %}
+              <div class="alert alert-{{ message.tags }} alert-dismissible fade show mt-3" role="alert" id="alert">
+                {{message}}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+            {% endif %}
+          {% endfor %}
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <!-- Bootstrap Popper and JS -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+
+  <!-- Custom JavaScrip file -->
+  <script src="{% static 'js/usersignup.js' %}"></script>
+
+  <!-- JQuery program to hide alert messages automatically -->
+  <script>
+    $(function(){
+      setTimeout(function(){
+        $("#alert").hide('blind',{}, 500)
+      }, 5000);
+    });
+  </script>
+
+  <noscript>
+    <style type="text/css">
+      .noscript{
+        display: none;
+      }
+    </style>
+    <p align="center"><img src="{% static 'images/alert.gif' %}" style="width: 50px; height:50px; margin-top: 100px;" alt="alert-gif"></p>
+    <p style="color:red; font-weight: 700;" align="center">Seems like JavaScript is disabled on your device, turn on JavaScript and try again</p>
+  </noscript>
+
 </body>
 </html>
